# niftymic_bot

./: .gitignore  .sops.yaml  Cargo.toml  flake.nix
secrets/: niftymic.toml
src/: archive.rs  config.rs  filemgr.rs  lib.rs  niftymic.rs  spawn.rs
